Minor improvements.